--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,8 +1,14 @@
 $text-color: #4e525d
 $turquoise: #44c0c2
+$image_dir: '../img/';
 
 @mixin column($width)
     width: 100%/$width
+ 
+@mixin placeholder
+    color: #c1c1c1
+    font-family: 'Open Sans'
+    font-size: 16px
 
 @font-face 
     font-family: Lobster 
@@ -12,38 +18,46 @@ body
     font-family: 'Open Sans', sans-serif
     color: $text-color
     
-header
-    line-height: 100px
+p, h4 
+    font-size: 14px
+    line-height: 1.5
 
 .container
     width: 1170px
     
-    &:after
+    &:after, &:before
         display: table
         content: ""
         clear: both
 
-.container
+.container, .swiper-container
     margin: 0 auto
     
 .col-2,.col-3,.col-4
     float: left
-    
-    &:last-child
-        float: right
 
 .col-1
     width: 100%;
+    clear: both
     
 .col-2
     @include column(2)
-       
-.col-3
-    @include column(3)
     
 .col-4
     @include column(4)
 
+header
+    line-height: 100px
+    background: #fff
+    position: fixed
+    width: 100%
+    height: 100px
+    top: 0
+    left: 0
+    right: 0
+    z-index: 10
+    border-bottom: 1px solid #fff
+    
 
 .logo
     font-family: Lobster
@@ -70,11 +84,233 @@ header
             background: #f8f9fb
             color: $turquoise
             border-bottom: 2px solid $turquoise  
-        
-.swiper-container
+         
+
+.swiper-container, .prices, footer
     width: 1440px
+    margin: 0 auto
+    
+.swiper-container
     height: 565px
+    margin-top: 100px
+    
+.swiper-button-next, .swiper-container-rtl .swiper-button-prev
+    background-image: url( $image_dir + 'right-arrow.png' ) 
+    right: 30px
+    
+.swiper-button-prev, .swiper-container-rtl .swiper-button-next
+    background-image: url( $image_dir + 'left-arrow.png' ) 
+    left: 30px
+
+.swiper-button-next, .swiper-button-prev
+    width: 53px
+    height: 53px
+    background-size: 53px
+    -webkit-background-size: 53px
+    
+.text-slider
+    position: absolute
+    width: 50%
+    left: 50%
+    margin-left: -25%
+    height: 300px
+    top: 125px
+    text-align: center
+    color: #fff
+    z-index: 10
+    
+    h1
+        font:
+            size: 63px
+            weight: 600
+            
+    h3
+        font:
+            size: 23px
+        padding: 20px 160px
+            
+    button
+        background: transparent
+        padding: 15px 35px
+        margin: 30px 0
+        font:
+            size: 26px
+            weight: 600
+        letter-spacing: 2px
+        border: 4px solid #fff 
+
+button
+    color: #fff
+    border-radius: 5px
+    cursor: pointer
+    
+button:focus, .footer-form:focus 
+  outline: 0
+  -webkit-box-shadow: none
+          box-shadow: none
+    
+.buy-now-btn
+    background: #788492
+    padding: 10px 50px
+    font:
+        size: 17px
+        weight: 600
+    border: 1px solid #788492;
+    &:hover 
+        background: $turquoise
+        border: 1px solid $turquoise
+    
+.team h1, footer h1
+    font-size: 42px  
+    
+.team, .prices, footer
+    padding: 95px 0
+    text-align: center
+    
+.team
+    img
+        border-radius: 50%
+        margin: 60px 0
+        
+    h1
+        margin-bottom: 70px
+        
+    h2
+        font-size: 22px
+    
+    p
+        margin-top: 25px
+        padding: 0 20px
+        
+.prices
+    background: #f1f1f1
+
+.col-3
+    width: 368px
+    margin-right: 33px
+    &:last-child
+        margin-right: 0
+    
+.col-3 table
+    width: 100%
+    border: none
+    thead 
+        tr:first-child
+            background: #485460
+            line-height: 80px
+        tr:last-child
+            background: #f8f9fb
+            line-height: 65px
+            border-bottom: 1px solid #f1f1f1 
+        h1
+            color: #fff
+            font-size: 26px
+        h2
+            font-size: 20px
+    tbody
+        tr
+            background: #fff
+            line-height: 45px
+            color: #8c9299
+            border-bottom: 1px solid #f1f1f1
+    tfoot
+        tr
+            background: #f8f9fb
+            line-height: 100px
+            color: #8c9299
+            border-bottom: 1px solid #f1f1f1
+            
+footer 
+    background-image: url( $image_dir + 'footer.jpg' ) 
+    color: #fff
+    .col-2 
+        text-align: left
+    .col-2:last-child 
+        text-align: right
+    h1
+        margin-bottom: 100px
+    h2
+        font-size: 24px
+    form
+        margin-left: 15px
+
+form .col-2 
+    width: 48%
+    &:last-child
+        float: right
+    
+.footer-btn 
+    background: $turquoise
+    border: 1px solid $turquoise
+    padding: 10px 50px
+
+textarea,input
+    width: 100%
+
+textarea
+    margin: 30px 0
+    resize: none; 
+    
+.footer-form 
+    padding: 15px 20px
+    border: none
+    border-radius: 4px
+    font-size: 16px
+    
+.footer-form 
+  &::-webkit-input-placeholder 
+    @include placeholder
+  
+  &::-moz-placeholder 
+    @include placeholder
+  
+  &:-ms-input-placeholder 
+    @include placeholder
+    
+ 
+.footer-desc
+    padding: 15px 20% 15px 0
+    color: #8c9299
+    
+.contacts
+    color: #bface2
+    
+.social-icons 
+    margin-left: -10px
+    padding: 20px 0 10px 0
+    
+.icon
+    width: 58px
+    height: 50px
+    display: inline-block
+    white-space: nowrap
+    background-image: url($image_dir + 'social-icons.png')
+
+.icon-fb 
+    background-position: 0
+
+.icon-tw
+     background-position: -58px -50px
+
+.icon-gmail
+    background-position: -116px -50px
+    
 
 
+    
+            
+        
+    
+    
+    
+    
+    
+    
+    
+
+    
+    
+
+    
     
             
