--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,14 +1,13 @@
 $text-color: #4e525d
 $turquoise: #44c0c2
 $image_dir: '../img/';
-
-@mixin column($width)
-    width: 100%/$width
  
 @mixin placeholder
     color: #c1c1c1
     font-family: 'Open Sans'
     font-size: 16px
+    
+//    MAIN STYLES
 
 @font-face 
     font-family: Lobster 
@@ -37,14 +36,24 @@ p, h4
     float: left
 
 .col-1
-    width: 100%;
+    width: 100%
     clear: both
     
-.col-2
-    @include column(2)
+.col-2 
+    width: 48%
+    &:last-child
+        float: right
+    
+.col-3
+    width: 368px
+    margin-right: 33px
+    &:last-child
+        margin-right: 0
     
 .col-4
-    @include column(4)
+    width: 25%
+    
+//    HEADER
 
 header
     line-height: 100px
@@ -57,22 +66,23 @@ header
     right: 0
     z-index: 10
     border-bottom: 1px solid #fff
+ 
+.btn-turquoise 
+    background: $turquoise
+    border: 1px solid $turquoise  
     
-
 .logo
     font-family: Lobster
     font-size: 43px
     color: $turquoise
     
+//    MENU
+    
 .menu
     text-align: right
-
+    
 .main-menu
     list-style: none
-    
-    li 
-        display: inline-block
-        white-space: nowrap
     a
         display: block
         font-size: 15px
@@ -84,7 +94,48 @@ header
             background: #f8f9fb
             color: $turquoise
             border-bottom: 2px solid $turquoise  
-         
+    
+.horizontal-menu 
+    li
+        display: inline-block
+        white-space: nowrap
+        
+.vertical-menu li
+    display: block
+    white-space: nowrap
+    
+.vertical-menu
+    width: 50%
+    float: right
+    line-height: 50px
+    background-color: rgba(255, 255, 255, 0.7)
+    a:hover
+        border-bottom: 1px solid $turquoise
+    
+.hidden
+    display: none
+    
+.visible
+    display: block
+    
+header .btn-turquoise 
+    padding: 10px 15px
+    margin-right: 20px
+    span
+        font-size: 15px
+        font-weight: 600
+        margin-left: 5px
+        
+.closed:after
+    content: "▼"
+    
+.opened:after
+    content: "▲"
+    
+.closed:after, .opened:after
+    margin-left: 5px
+
+//    SLIDER
 
 .swiper-container, .prices, footer
     width: 1440px
@@ -149,19 +200,11 @@ button:focus, .footer-form:focus
   -webkit-box-shadow: none
           box-shadow: none
     
-.buy-now-btn
-    background: #788492
-    padding: 10px 50px
-    font:
-        size: 17px
-        weight: 600
-    border: 1px solid #788492;
-    &:hover 
-        background: $turquoise
-        border: 1px solid $turquoise
-    
+//    TEAM 
+
 .team h1, footer h1
-    font-size: 42px  
+    font-size: 42px
+    margin-bottom: 100px
     
 .team, .prices, footer
     padding: 95px 0
@@ -170,10 +213,8 @@ button:focus, .footer-form:focus
 .team
     img
         border-radius: 50%
-        margin: 60px 0
-        
-    h1
-        margin-bottom: 70px
+        margin: 30px 0 60px 0
+        width: 90%
         
     h2
         font-size: 22px
@@ -182,14 +223,11 @@ button:focus, .footer-form:focus
         margin-top: 25px
         padding: 0 20px
         
+        
+//    SERVICES / PRICES
+
 .prices
     background: #f1f1f1
-
-.col-3
-    width: 368px
-    margin-right: 33px
-    &:last-child
-        margin-right: 0
     
 .col-3 table
     width: 100%
@@ -218,7 +256,20 @@ button:focus, .footer-form:focus
             background: #f8f9fb
             line-height: 100px
             color: #8c9299
-            border-bottom: 1px solid #f1f1f1
+            border-bottom: 1px solid #f1f1f1 
+            
+.buy-now-btn
+    background: #788492
+    padding: 10px 50px
+    font:
+        size: 17px
+        weight: 600
+    border: 1px solid #788492;
+    &:hover 
+        background: $turquoise
+        border: 1px solid $turquoise
+    
+//    FOOTER
             
 footer 
     background-image: url( $image_dir + 'footer.jpg' ) 
@@ -227,23 +278,15 @@ footer
         text-align: left
     .col-2:last-child 
         text-align: right
-    h1
-        margin-bottom: 100px
     h2
         font-size: 24px
     form
         margin-left: 15px
-
-form .col-2 
-    width: 48%
-    &:last-child
-        float: right
     
-.footer-btn 
-    background: $turquoise
-    border: 1px solid $turquoise
+footer .btn-turquoise
     padding: 10px 50px
-
+    font-size: 16px
+    
 textarea,input
     width: 100%
 
@@ -275,6 +318,8 @@ textarea
 .contacts
     color: #bface2
     
+//    ICONS
+    
 .social-icons 
     margin-left: -10px
     padding: 20px 0 10px 0
@@ -295,22 +340,130 @@ textarea
 .icon-gmail
     background-position: -116px -50px
     
-
+//    MEDIA QUERIES  
+    
+ //just for IE9 - IE-10   
+@media screen and (min-width:0\0) 
+     .buy-now-btn, header .btn-turquoise
+        line-height: 20px;
 
     
-            
+@media only screen and (max-width: 1460px)
+    .swiper-container, .prices, footer
+        width: 100%
         
+@media only screen and (max-width: 1240px)
+    .container
+        width: 100%
+        
+    .logo h1
+        margin-left: 20px
+        
+    .footer-main
+        padding: 0 20px
+        
+    .text-slider
+        width: 70%
+        margin-left: -35%
+        
+    .col-3
+        width: 30%
+        margin: 20px
+            
+@media only screen and (max-width: 1170px)
+    header 
+        .col-2:first-child
+            width: 20%
+            
+        .col-2:last-child
+            width: 75%
     
+@media only screen and (max-width: 1024px)   
+    .col-3
+        margin: 15px
+        
+    header
+        height: 70px
+        line-height: 70px
+        
+    .swiper-container
+        margin-top: 70px
+        height: 350px
     
-    
-    
-    
-    
-    
+    .text-slider
+        top: 60px
+        
+    .swiper-button-next, .swiper-container-rtl .swiper-button-prev
+        right: 20px
+        
+    .swiper-button-prev, .swiper-container-rtl .swiper-button-next
+        left: 20px
+        
+    .text-slider
+        h1
+            font-size: 42px
+        
+        h3
+            padding: 10px
+            font-size: 18px
+            
+        button
+            font-size: 18px
+            margin: 20px 0
 
+@media only screen and (max-width: 768px)   
+    .col-4
+        width: 50%
+        
+    .team img
+        width: 70%
+        
+    .col-3
+        margin: 10px
+        
+    .buy-now-btn
+        padding: 10px 20px
+        
+    .team, .prices, footer
+        padding: 50px 0
+        
+    .team h1, footer h1
+        margin-bottom: 50px
+     
+@media only screen and (max-width: 560px) 
+    .text-slider
+        top: 30px
+        width: 100%
+        margin-left: -50%
+        
+    .swiper-button-next, .swiper-container-rtl .swiper-button-prev, .swiper-button-prev, .swiper-container-rtl .swiper-button-next
+        background: none
+        
+    .col-3
+        width: 100%
+        margin: 20px 0
+        
+    .buy-now-btn
+        padding: 10px 50px
+        
+    footer .col-2
+        width: 100%
+        margin: 20px 0
+        
+    footer .col-2
+        text-align: center
+        
+    .footer-desc, .social-icons
+        padding: 15px 0
+        
+    .team h1, footer h1
+        margin-bottom: 20px
     
-    
-
-    
-    
+@media only screen and (max-width: 375px) 
+    .col-4
+        width: 100%
+        margin: 10px 0
+        
+    .team img
+        margin: 20px 0
             
