--- a/app/css/main.css
+++ b/app/css/main.css
@@ -13,6 +13,9 @@ body {
 a {
     color: #44c0c2;
     text-decoration: none;
+}
+
+a:hover, a:active, a:visited {
     text-decoration: none;
     color: #44c0c2;
 }
@@ -104,6 +107,12 @@ header {
     background: #f8f9fb;
     color: #44c0c2;
     border-bottom: 2px solid #44c0c2;
+}
+
+.main-menu .inactive {
+    background: none;
+    color: #4e525d;
+    border-bottom: none;
 }
 
 .horizontal-menu li {
